REOPENED220838
Denying storage access on playstation.com then clicking sign-in fails to show the prompt again
https://bugs.webkit.org/show_bug.cgi?id=220838
Summary Denying storage access on playstation.com then clicking sign-in fails to show...
Kate Cheney
Reported 2021-01-21 17:43:17 PST
The sign in will fail in this case.
Attachments
Patch (2.12 KB, patch)
2021-01-21 17:45 PST, Kate Cheney
no flags
Radar WebKit Bug Importer
Comment 1 2021-01-21 17:43:31 PST
Kate Cheney
Comment 2 2021-01-21 17:45:09 PST
EWS
Comment 3 2021-01-22 07:09:54 PST
Committed r271744: <https://trac.webkit.org/changeset/271744> All reviewed patches have been landed. Closing bug and clearing flags on attachment 418103 [details].
WebKit Commit Bot
Comment 4 2021-02-02 10:23:57 PST
Re-opened since this is blocked by bug 221271
Note You need to log in before you can comment on or make changes to this bug.